--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -83,6 +83,9 @@
 
 		var form = document.getElementById('form')
 
+		//csrftoken = form.getElementsByTagName("input")[0].value
+		//console.log('Newtoken:', form.getElementsByTagName('input')[0].value)
+
 		form.addEventListener('submit', function(e){
 			e.preventDefault()
 			console.log('Form Submitted....')
